force-app/main/default/objects/MIP_Contract__c/MIP_Contract__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to create Partner Mutual Investment Plan Contracts and calculate expected and actual payouts based on the progress made against the selected incentive program.</description>
    <label>MIP Contract</label>
    <nameField>
        <displayFormat>CID-{0000000}</displayFormat>
        <label>MIP Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIP Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>