force-app/main/default/objects/MIP_Contract__c/fields/Actual_Rebate_ROI__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rebate_ROI__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Actual Bookings ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>