force-app/main/default/objects/MIP_Contract__c/fields/Actual_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Investment__c</fullName>
    <formula>Actual_Total_Funded_Head_Payout__c  +  Actual_Rebate_Payout__c +  MDF_Payout__c +  SPIFF_Payout__c +  Actual_Total_Milestone_Payout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>