force-app/main/default/objects/MIP_Contract__c/fields/Actual_Total_Milestone_Payout__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Milestone_Payout__c</fullName>
    <label>Actual Total Milestone Payout</label>
    <summarizedField>MIP_Element__c.Actual_Milestone_Payout__c</summarizedField>
    <summaryFilterItems>
        <field>MIP_Element__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Rebate Milestone</value>
    </summaryFilterItems>
    <summaryForeignKey>MIP_Element__c.MIP_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>