force-app/main/default/objects/MIP_Contract__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>