force-app/main/default/objects/MIP_Contract__c/fields/CDM__c.field-meta.xml
<CustomField>
    <fullName>CDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MIP_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>