force-app/main/default/objects/MIP_Contract__c/fields/CDM_manager__c.field-meta.xml
<CustomField>
    <fullName>CDM_manager__c</fullName>
    <label>CDM manager</label>
    <type>Email</type>
</CustomField>