force-app/main/default/objects/MIP_Contract__c/fields/Date_of_submission1__c.field-meta.xml
<CustomField>
    <fullName>Date_of_submission1__c</fullName>
    <label>Date of submission</label>
    <type>Date</type>
</CustomField>