force-app/main/default/objects/MIP_Contract__c/fields/Expected_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Investment__c</fullName>
    <formula>Max_Rebate_Payout__c  +  Max_Total_Funded_Head_Payout__c  +  SPIFF_Payout__c +  MDF_Payout__c +  Max_Total_Milestone_Payout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>