force-app/main/default/objects/MIP_Contract__c/fields/Max_Enrollment_Payout__c.field-meta.xml
<CustomField>
    <fullName>Max_Enrollment_Payout__c</fullName>
    <label>Max Enrollment Payout</label>
    <summarizedField>MIP_Element__c.Max_Enrollment_Payout__c</summarizedField>
    <summaryFilterItems>
        <field>MIP_Element__c.Element_Type__c</field>
        <operation>equals</operation>
        <value>Enrollment</value>
    </summaryFilterItems>
    <summaryForeignKey>MIP_Element__c.MIP_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>