force-app/main/default/objects/MIP_Contract__c/fields/Max_Rebate_Payout__c.field-meta.xml
<CustomField>
    <fullName>Max_Rebate_Payout__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Max Total Rebate Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>