force-app/main/default/objects/MIP_Contract__c/fields/Max_Total_Funded_Head_Payout__c.field-meta.xml
<CustomField>
    <fullName>Max_Total_Funded_Head_Payout__c</fullName>
    <label>Max Total Funded Head Payout</label>
    <summarizedField>MIP_Element__c.Max_Funded_Head_Payout__c</summarizedField>
    <summaryFilterItems>
        <field>MIP_Element__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Funded Head</value>
    </summaryFilterItems>
    <summaryForeignKey>MIP_Element__c.MIP_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>