force-app/main/default/objects/MIP_Contract__c/fields/Participating_Partner_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Participating_Partner_Accounts__c</fullName>
    <description>Semi Colon Separated list of Partner Account Id&apos;s which are part of partner account hierarchy and are MIP contract participants</description>
    <label>Participating Partner Accounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>