force-app/main/default/objects/MIP_Contract__c/fields/Partner_Contact_of_Signature__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_of_Signature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Contact of Signature</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Partner_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MIP Contracts</relationshipLabel>
    <relationshipName>MIP_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>