force-app/main/default/objects/MIP_Contract__c/fields/PSNL_Total_ROI__c.field-meta.xml
<CustomField>
    <fullName>PSNL_Total_ROI__c</fullName>
    <formula>PSNL_Bookings_Payout__c / ( Actual_Total_Milestone_Payout__c + Actual_Rebate_Payout__c + MDF_Payout__c +  SPIFF_Payout__c +  Max_Total_Funded_Head_Payout__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PSNL Bookings / (Actual Total Rebate Payout + Actual Total Milestone Payout + MDF Payout + SPIFF Payout + Max Total Funded Head Payout)</inlineHelpText>
    <label>PSNL Total ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>