force-app/main/default/objects/MIP_Contract__c/fields/Tier_1_Bookings_Rebate_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Bookings_Rebate_Distribution__c</fullName>
    <label>Tier 1 Bookings Rebate Distribution</label>
    <summarizedField>MIP_Element__c.Tier_1_Bookings_Rebate_Distribution__c</summarizedField>
    <summaryFilterItems>
        <field>MIP_Element__c.Element_Type__c</field>
        <operation>equals</operation>
        <value>Partner Sourced Bookings</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>MIP_Element__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Bookings Element</value>
    </summaryFilterItems>
    <summaryForeignKey>MIP_Element__c.MIP_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>