force-app/main/default/objects/MIP_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Account__c</columns>
    <columns>Participating_Partner_Accounts__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Date_of_submission1__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>