force-app/main/default/objects/MIP_Contract__c/listViews/Detailed_Contract_View.listView-meta.xml
<ListView>
    <fullName>Detailed_Contract_View</fullName>
    <columns>NAME</columns>
    <columns>Partner_Account__c</columns>
    <columns>Status__c</columns>
    <columns>End_Date__c</columns>
    <columns>IsActive__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Fiscal_Period__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Detailed Contract View</label>
</ListView>