force-app/main/default/objects/MIP_Contract__c/listViews/Partner_Program_Operation_MIP_Contract.listView-meta.xml
<ListView>
    <fullName>Partner_Program_Operation_MIP_Contract</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Program Operation</label>
    <queue>Partner_Program_Operation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>